--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.3.31",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.435.0",
     "moment": "^2.30.1",
